# cpp-chat

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Wrappers/c-sharp-chat/PubnubChatApi/: PubnubChatApi.sln
Wrappers/c-sharp-chat/PubnubChatApi/PubNubChatApi.Tests/: ChannelTests.cs  ChatEventTests.cs  ChatTests.cs  EventTests.cs  MembershipTests.cs  MessageTests.cs  RestrictionsTests.cs  ThreadsTests.cs  UnitTest1.cs  UserTests.cs
Wrappers/c-sharp-chat/PubnubChatApi/PubnubChatApi/: PubnubChatApi.csproj
Wrappers/c-sharp-chat/PubnubChatApi/PubnubChatApi/Entities/: Channel.cs  Chat.cs  ChatAccessManager.cs  Event.cs  Membership.cs  Message.cs  MessageDraft.cs  PointerWrapper.cs  ThreadChannel.cs  ThreadMessage.cs  User.cs
Wrappers/c-sharp-chat/PubnubChatApi/PubnubChatApi/Entities/Base/: ChatEntity.cs  PointerWrapper.cs  UniquePointerWrapper.cs
Wrappers/c-sharp-chat/PubnubChatApi/PubnubChatApi/Entities/Data/: ChannelsResponseWrapper.cs  MarkMessagesAsReadWrapper.cs  MembersResponseWrapper.cs  Page.cs  PubnubChatConfig.cs  Restriction.cs  UnreadMessageWrapper.cs  UsersResponseWrapper.cs
Wrappers/c-sharp-chat/PubnubChatApi/PubnubChatApi/Entities/Events/: ChatEvent.cs  ModerationEvent.cs  ReportEvent.cs
Wrappers/c-sharp-chat/PubnubChatApi/PubnubChatApi/Enums/: PubnubMessageActionType.cs  pubnub_chat_message_type.cs
Wrappers/c-sharp-chat/PubnubChatApi/PubnubChatApi/Utilities/: CUtilities.cs  DllImportSettings.cs
Wrappers/unity-chat/PubnubChatUnity/Assets/PubnubChat/: PubnubChatApi.xml  PubnubChatConfigAsset.cs  PubnubChatSample.cs
Wrappers/unity-chat/PubnubChatUnity/Assets/Scenes/: SampleScene.unity
Wrappers/unreal-chat/PubnubChatSDK/Source/PubnubChatSDK/Private/: PubnubChannel.cpp  PubnubChat.cpp  PubnubChatSubsystem.cpp  PubnubMembership.cpp  PubnubMessage.cpp  (+2 more)
c_abi/include/: c_callback_handle.hpp  c_channel.hpp  c_chat.hpp  c_errors.hpp  c_membership.hpp  c_message.hpp  c_message_draft.hpp  c_response.hpp  c_serialization.hpp  c_thread_channel.hpp  c_thread_message.hpp  c_user.hpp  c_utils.hpp
c_abi/src/: c_callback_handle.cpp  c_channel.cpp  c_chat.cpp  c_errors.cpp  c_membership.cpp  c_message.cpp  c_message_draft.cpp  c_response.cpp  c_serialization.cpp  c_thread_channel.cpp  c_thread_message.cpp  c_user.cpp
example/: delete_message.cpp  entity_update.cpp  forward_message.cpp  hello_world.cpp  main.cpp  message_draft.cpp  message_reactions.cpp  read_receipts.cpp  report_user.cpp  restrictions.cpp  thread_channel.cpp  typing.cpp
include/: callbacks.hpp  chat.h  chat.hpp  chat_helpers.hpp  enums.hpp  export.hpp  lib.hpp  string.hpp
include/ChatSDK/: ChatSDK.cpp  ChatSDK.h
include/c_functions/: c_channel.hpp  c_chat.hpp  c_errors.hpp  c_membership.hpp  c_message.hpp  c_serialization.hpp  c_user.hpp
include/chat/: channel.h  channel.hpp  chat_helpers.hpp  membership.hpp  message.h  message.hpp  message_draft.hpp  user.h  user.hpp
include/presentation/: channel.hpp  chat.hpp  const_values.hpp  membership.hpp  message.hpp  message_draft.hpp  restrictions.hpp  user.hpp
include/pubnub_chat/: access_manager.hpp  base_message.hpp  base_message.tpp  callback_handle.hpp  callback_stop.hpp  channel.hpp  chat.hpp  chat_helpers.hpp  chat_message_data.hpp  enums.hpp  event.hpp  map.hpp  membership.hpp  message.hpp  message_draft.hpp  option.hpp  string.hpp  text_link.hpp  thread_channel.hpp  thread_message.hpp  user.hpp  vector.hpp
include/pubnub_chat/helpers/: export.hpp
src/: chat.cpp  chat_helpers.cpp  lib.cpp  string.cpp
src/application/: access_manager_service.cpp  access_manager_service.hpp  bundles.hpp  callback_service.cpp  callback_service.hpp  channel_service.cpp  channel_service.hpp  chat_service.cpp  chat_service.hpp  draft_service.cpp  draft_service.hpp  enum_converters.hpp  membership_service.cpp  membership_service.hpp  message_service.cpp  message_service.hpp  presence_service.cpp  presence_service.hpp  restrictions_service.cpp  restrictions_service.hpp  subscription.cpp  subscription.hpp  user_service.cpp  user_service.hpp
src/application/dao/: channel_dao.cpp  channel_dao.hpp  membership_dao.cpp  membership_dao.hpp  message_dao.cpp  message_dao.hpp  message_draft_dao.cpp  message_draft_dao.hpp  user_dao.cpp  user_dao.hpp
src/c_functions/: c_channel.cpp  c_chat.cpp  c_errors.cpp  c_membership.cpp  c_message.cpp  c_serialization.cpp  c_user.cpp
src/chat/: channel.cpp  chat_helpers.cpp  membership.cpp  message.cpp  message_draft.cpp  user.cpp
src/domain/: access_manager.cpp  access_manager.hpp  access_manager_logic.cpp  access_manager_logic.hpp  channel_entity.cpp  channel_entity.hpp  chat_entity.hpp  json.cpp  json.hpp  membership_entity.cpp  membership_entity.hpp  message_draft_entity.cpp  message_draft_entity.hpp  message_entity.cpp  message_entity.hpp  parsers.cpp  parsers.hpp  presence.cpp  presence.hpp  quotes.cpp  quotes.hpp  restrictions.cpp  restrictions.hpp  timetoken.cpp  timetoken.hpp  typing.cpp  typing.hpp  user_entity.cpp  user_entity.hpp
src/infra/: callbacks_repository.cpp  callbacks_repository.hpp  entity_repository.cpp  entity_repository.hpp  interval_task.cpp  interval_task.hpp  logger.cpp  logger.hpp  pubnub.cpp  pubnub.hpp  rate_limiter.cpp  rate_limiter.hpp  repository.hpp  serialization.cpp  serialization.hpp  sync.cpp  sync.hpp  timer.cpp  timer.hpp
src/presentation/: access_manager.cpp  callback_handle.cpp  channel.cpp  channel.hpp  chat.cpp  chat.hpp  membership.cpp  message.cpp  message_draft.cpp  thread_channel.cpp  thread_message.cpp  user.cpp
test/: json_unit.cpp  string_unit.c  string_unit.cpp  test_helpers.hpp
test/e2e/: channel_e2e.cpp  chat_e2e.cpp  debug_test.cc  e2e_tests_helpers.h  membership_e2e.cpp  message_draft_e2e.cpp  message_e2e.cpp  restrictions_e2e.cpp  threads_e2e.cpp  user_e2e.cpp
test/unit/: channel_entity_unit.cpp  json_unit.cpp  membership_entity_unit.cpp  message_draft_entity_unit.cpp  parsers_unit.cpp  presence_unit.cpp  quotes_unit.cpp  restrictions_unit.cpp  string_unit.cpp  timetoken_unit.cpp  typing_unit.cpp  user_entity_unit.cpp
(+11 files in other folders)
